# edgar-rs

./: .gitignore  Cargo.toml  Makefile  README.md
examples/: basic_usage.rs  cloudflare_worker.rs  revenue_taxonomies.rs
src/: api.rs  client.rs  config.rs  error.rs  http.rs  lib.rs  main.rs  rate_limit.rs  types.rs
src/http/: native.rs  workers.rs
src/models/: company_concept.rs  company_facts.rs  company_tickers.rs  company_tickers_mf.rs  frames.rs  mod.rs  submission.rs
src/utils/: cik.rs  download.rs  mod.rs
tests/: README.md  lib.rs
tests/common/: constants.rs  mod.rs  test_client.rs
tests/integration/: client_tests.rs  error_tests.rs  mod.rs  tickers_tests.rs  xbrl_tests.rs
